--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MyAndroidProject</string>
-    <string name="rent_car">Five Superman Brother</string>
+    <string name="rent_car">Rent A Car</string>
     <string name="wel_come">Welcome</string>
     <string name="please_login_with_your_information">Please login with your information</string>
     <string name="email_address">Email Address</string>
