--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MyAndroidProject</string>
-    <string name="rent_car">Rent A Car</string>
+    <string name="rent_car">Sign Up One Forever</string>
     <string name="wel_come">Welcome</string>
     <string name="please_login_with_your_information">Please login with your information</string>
     <string name="email_address">Email Address</string>
@@ -8,9 +8,9 @@
     <string name="remember_me">Remember me</string>
     <string name="i_forgot_my_password">I forgot my password</string>
     <string name="login">Login</string>
-    <string name="or_login_with">Or login with</string>
+    <string name="or_login_with">Or Login With</string>
     <string name="email">Email</string>
-    <string name="create_a_account">Create A Account</string>
+    <string name="create_a_account">Create An Account</string>
     <string name="sign_up">Sign Up</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="user_name">User Name</string>
@@ -19,5 +19,17 @@
     <string name="first_name">First Name</string>
     <string name="sign_in">Sign In</string>
     <string name="already_s_have_an_account_login_now">Already\'s Have An Account? Login Now</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="title_activity_details_car">DetailsCar</string>
 
 </resources>
