--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+    <string-array name="gender_array">
+        <item>Nam</item>
+        <item>Nữ</item>
+    </string-array>
     <string name="app_name">MyAndroidProject</string>
     <string name="rent_car">Five Superman Brother</string>
     <string name="wel_come">Welcome</string>
