--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,7 @@
     <string name="qu_t_ng">Quà tặng</string>
     <string name="gi_y_ph_p_l_i_xe">Giấy phép lái xe</string>
     <string name="ng_xu_t">Đăng xuất</string>
+    <string name="i_m_t_kh_u">Đổi Mật Khẩu</string>
+    <string name="title_activity_maps_shipper">MapsActivityShipper</string>
 
 </resources>
