--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,10 @@
     <string name="ng_xu_t">Đăng xuất</string>
     <string name="i_m_t_kh_u">Đổi Mật Khẩu</string>
     <string name="title_activity_maps_shipper">MapsActivityShipper</string>
+    <string name="title_activity_maps">Current Place Details</string>
+    <string name="default_info_title">Default Location</string>
+    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
+    <string name="option_get_place">Get place</string>
+    <string name="pick_place">Choose a place</string>
 
 </resources>
