--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
         <item>Nam</item>
         <item>Nữ</item>
     </string-array>
-    <string name="app_name">MyAndroidProject</string>
+    <string name="app_name">UwU</string>
     <string name="rent_car">Five Superman Brother</string>
     <string name="wel_come">Welcome</string>
     <string name="please_login_with_your_information">Please login with your information</string>
